--- a/src/components/Meals/AvailableMeals.module.css
+++ b/src/components/Meals/AvailableMeals.module.css
@@ -1,4 +1,29 @@
-.meals {
+/* .meals {
+    max-width: 60rem;
+    width: 90%;
+    margin: 2rem auto;
+    animation: meals-appear 1s ease-out forwards;
+  }
+  
+  .meals ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+  
+  @keyframes meals-appear {
+    from {
+      opacity: 0;
+      transform: translateY(3rem);
+    }
+  
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  } */
+
+  .meals {
     max-width: 60rem;
     width: 90%;
     margin: 2rem auto;
@@ -22,3 +47,60 @@
       transform: translateY(0);
     }
   }
+  
+  .login {
+    max-width: 25rem;
+    width: 80%;
+    margin: 2rem auto;
+  }
+  
+  .loginForm {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+  
+  .loginForm input {
+    padding: 0.5rem;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+  }
+  
+  .loginForm button {
+    padding: 0.5rem;
+    border: none;
+    border-radius: 4px;
+    background-color: #ff2058;
+    color: white;
+    cursor: pointer;
+  }
+  
+  .loginForm button:hover {
+    background-color: #ff0a48;
+  }
+  
+  .addMeal {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+  
+  .addMeal input {
+    padding: 0.5rem;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+  }
+  
+  .addMeal button {
+    padding: 0.5rem;
+    border: none;
+    border-radius: 4px;
+    background-color: #ff2058;
+    color: white;
+    cursor: pointer;
+  }
+  
+  .addMeal button:hover {
+    background-color: #ff0a48;
+  }
+  
